# EnterpriseLinux-SoftwareSupplyChain

./: .gitignore  README.md  pyproject.toml
docs/: Architecture and Traversal of Massive-Scale Dependency Graphs.md  MVP Loop And Public Boundary.md  MVP Plus Performance Roadmap.md  Report Bundle Manifest Schema.md  Report Bundle Verification Schema.md  Report JSON Schemas.md  Validation Failure Examples.md  validation-failure-example-filters.json  validation-failure-example-index.json
scripts/: browser_smoke_bundle_catalog_filters.py  browser_smoke_graph_diff_filters.py  browser_smoke_graph_diff_tree_filters.py  browser_smoke_report_bundle_navigation.py  browser_smoke_report_sorting.py  generate_failure_example_index.py  generate_fixture_provenance.py  generate_public_fixture_reports.py  generate_schema_index.py  smoke_validate.py
src/: __init__.py  advisory_overlay.py  albs_artifact_inventory.py  albs_build_diff.py  albs_build_timing.py  albs_log_intelligence.py  albs_release_completeness.py  benchmark.py  bundle_catalog.py  cli.py  export_batch.py  graph_diff.py  impact_report.py  libsolv_bridge.py  license_policy.py  performance_report.py  public_advisory_feed.py  query_report.py  real_data_coverage.py  real_data_coverage_diff.py  real_data_replacement_plan.py  real_data_replacement_plan_diff.py  rpm_albs_provenance.py  rpm_repository_diff.py  rpm_repository_summary.py  schema_validation.py  submission_plan_index.py  triage_summary.py
tests/: test_accelerators.py  test_advisory_overlay.py  test_albs_adapter.py  test_albs_artifact_inventory.py  test_benchmark.py  (+63 more)
(+252 files in other folders)
