[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-dependency-graph"
version = "0.1.0"
description = "CSR-backed dependency graph resolver and exporter prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Software Supply Chain" }]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]
fast = ["numba>=0.61"]

[project.scripts]
edgp = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
